syntax = "proto3";

import "api_slots.proto";

package com.example.generated;
option java_multiple_files = true;



message GetItemForSlotsRequest {
  int64 userId = 1;        // NOWE: do autoryzacji (owner/author)
  SlotItemType itemType = 2;
  int64 itemId = 3;
}

message ItemForSlots {
  SlotItemType itemType = 1;
  int64 itemId = 2;

  string title = 3;
  int32 publicationYear = 4;

  double points = 5;

  repeated SlotAuthor authors = 6;
}

message SlotAuthor {
  int64 userId = 1;     // 0 = external
  string fullName = 2;
}

service ArticleSlotsService {
  rpc GetItemForSlots(GetItemForSlotsRequest) returns (ItemForSlots);
}
